--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>page not found</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <a href="/gatos"><img src="image/unnamed.png" alt="error 404"></a>
+    <div class="error">
+      <a  href="/gatos"><img  src="image/unnamed.png" alt="error 404"></a>
+    </div>
   </body>
 </html>
